# cursor_projects

./: README.md
fastapi_pandas_docker/: Dockerfile  sample_data.csv
gpu_code/: add  add_vector_details  add_vector_details.cu  matrix_multiplication.py
htmx_flask_study/: .dockerignore  Dockerfile_bypass  README.md  app.py  database.py  docker_compose_readme.md  htmx_detail_task_readme.md  htmx_integration_flask_readme.md  htmx_readme.md  init_db.py  redis_rabbitmq_ideas.md  requirements.txt  user_login_gmail_account.md
invoice_tracker/: app.py  database.py  demo.py  inventory.db  inventory_tracker_doc.md
m5_data_api_pbi/: flask_app.py  pyproject.toml  request_data.py
m5_timeseries_withagentic_ide/: README.md  baseline_sma.py  baseline_xgbmodel.py  calendar_analysis.html  calender_data_eda_with_plotly.py  check_columns.py  column_details.md  evaluation_metric.py  event_distribution.html  holiday_types.html  just_cleaning_data.py  just_loading_data.py  price_analysis_by_item.html  sales_eda_with_plotly.py  snap_analysis.html  weekday_pattern.html  wrmsse_score_explainer.md
powerbi_with_ai/: .~lock.project_data.xlsx#  Fictitious_GateDates.xlsx  complex_row_xlsx.py  complex_xlsx.py  fictious_pjt_data.py  ingest_data.py  ingestion_server.py  plotly_line.py  project_data.xlsx  project_data_ingestion.py
python_universe/: README.md  hello.py  pyproject.toml  python_universe00.py  python_universe01.py  python_universe02.py  python_universe_cache.json
rust_honeypot/: Cargo.toml  rust_honeypot.service  rust_honeypot_notes.md
rust_honeypot/src/: main.rs
(+58 files in other folders)
