[package]
name = "rust_honeypot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] } 